<resources>
    <string name="app_name">Hardware_maintenance</string>
    <string name="welcome_text">Welcome to HW_maintenance! \n \n Please enter your information below : </string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="postal_address">Postal Address</string>
    <string name="city">City</string>
    <string name="zip_code">Zip Code</string>
    <string name="phone_number">Phone number</string>
    <string name="email_address">Email address</string>
    <string name="get_started_button">Get started</string>
    <string name="bottom_menu_bt1">Home</string>
    <string name="bottom_menu_bt2">Repairs</string>
    <string name="bottom_menu_bt3">Profile</string>
    <string name="main_bt_diagnosis">Diagnosis</string>
    <string name="main_bt1">System</string>
    <string name="main_bt2">Security</string>
    <string name="main_bt3">Memory</string>
    <string name="main_bt4">Screen</string>
    <string name="main_bt5">Peripherals (Mouse, keyboard)</string>
    <string name="main_bt6">Battery</string>
    <string name="main_bt7">Button 7</string>
    <string name="main_bt8">Button 8</string>
    <string name="main_bt9">Button 9</string>
    <string name="main_bt10">Button 10</string>
    <string name="main_banner_text">Welcome %1$s \n Please select your issue below :)</string> <!-- will fetch arg of getText in mainActivity -->
    <string name="diagnosis_made">I have made a diagnosis or I know what I\'m doing</string>
    <string name="checkbox_issue_other_hint">Other (type here)</string>
    <string name="issue_comment">Enter a comment here&#8230;</string>
    <string name="back_button">Back</string>
    <string name="confirm_button">Confirm</string>
    <string name="system_issue_1">System Issue 1</string>
    <string name="system_issue_2">System Issue 2</string>
    <string name="system_issue_3">System Issue 3</string>
    <string name="system_issue_4">System Issue 4</string>
    <string name="system_issue_5">System Issue 5</string>
    <string name="system_issue_6">System Issue 6</string>
    <string name="system_issue_7">System Issue 7</string>
    <string name="system_issue_8">System Issue 8</string>
    <string name="system_issue_9">System Issue 9</string>
    <string name="system_issue_10">System Issue 10</string>
    <string name="security_issue_1">Security Issue 1</string>
    <string name="security_issue_2">Security Issue 2</string>
    <string name="security_issue_3">Security Issue 3</string>
    <string name="security_issue_4">Security Issue 4</string>
    <string name="security_issue_5">Security Issue 5</string>
    <string name="security_issue_6">Security Issue 6</string>
    <string name="security_issue_7">Security Issue 7</string>
    <string name="security_issue_8">Security Issue 8</string>
    <string name="security_issue_9">Security Issue 9</string>
    <string name="security_issue_10">Security Issue 10</string>
    <string name="memory_issue_1">Memory Issue 1</string>
    <string name="memory_issue_2">Memory Issue 2</string>
    <string name="memory_issue_3">Memory Issue 3</string>
    <string name="memory_issue_4">Memory Issue 4</string>
    <string name="memory_issue_5">Memory Issue 5</string>
    <string name="memory_issue_6">Memory Issue 6</string>
    <string name="memory_issue_7">Memory Issue 7</string>
    <string name="memory_issue_8">Memory Issue 8</string>
    <string name="memory_issue_9">Memory Issue 9</string>
    <string name="memory_issue_10">Memory Issue 10</string>
    <string name="screen_issue_1">Screen Issue 1</string>
    <string name="screen_issue_2">Screen Issue 2</string>
    <string name="screen_issue_3">Screen Issue 3</string>
    <string name="screen_issue_4">Screen Issue 4</string>
    <string name="screen_issue_5">Screen Issue 5</string>
    <string name="screen_issue_6">Screen Issue 6</string>
    <string name="screen_issue_7">Screen Issue 7</string>
    <string name="screen_issue_8">Screen Issue 8</string>
    <string name="screen_issue_9">Screen Issue 9</string>
    <string name="screen_issue_10">Screen Issue 10</string>
    <string name="peripherals_issue_1">Peripherals Issue 1</string>
    <string name="peripherals_issue_2">Peripherals Issue 2</string>
    <string name="peripherals_issue_3">Peripherals Issue 3</string>
    <string name="peripherals_issue_4">Peripherals Issue 4</string>
    <string name="peripherals_issue_5">Peripherals Issue 5</string>
    <string name="peripherals_issue_6">Peripherals Issue 6</string>
    <string name="peripherals_issue_7">Peripherals Issue 7</string>
    <string name="peripherals_issue_8">Peripherals Issue 8</string>
    <string name="peripherals_issue_9">Peripherals Issue 9</string>
    <string name="peripherals_issue_10">Peripherals Issue 10</string>
    <string name="battery_issue_1">Battery Issue 1</string>
    <string name="battery_issue_2">Battery Issue 2</string>
    <string name="battery_issue_3">Battery Issue 3</string>
    <string name="battery_issue_4">Battery Issue 4</string>
    <string name="battery_issue_5">Battery Issue 5</string>
    <string name="battery_issue_6">Battery Issue 6</string>
    <string name="battery_issue_7">Battery Issue 7</string>
    <string name="battery_issue_8">Battery Issue 8</string>
    <string name="battery_issue_9">Battery Issue 9</string>
    <string name="battery_issue_10">Battery Issue 10</string>
    <string name="button7_issue_1">Button7 Issue 1</string>
    <string name="button7_issue_2">Button7 Issue 2</string>
    <string name="button7_issue_3">Button7 Issue 3</string>
    <string name="button7_issue_4">Button7 Issue 4</string>
    <string name="button7_issue_5">Button7 Issue 5</string>
    <string name="button7_issue_6">Button7 Issue 6</string>
    <string name="button7_issue_7">Button7 Issue 7</string>
    <string name="button7_issue_8">Button7 Issue 8</string>
    <string name="button7_issue_9">Button7 Issue 9</string>
    <string name="button7_issue_10">Button7 Issue 10</string>
    <string name="button8_issue_1">Button8 Issue 1</string>
    <string name="button8_issue_2">Button8 Issue 2</string>
    <string name="button8_issue_3">Button8 Issue 3</string>
    <string name="button8_issue_4">Button8 Issue 4</string>
    <string name="button8_issue_5">Button8 Issue 5</string>
    <string name="button8_issue_6">Button8 Issue 6</string>
    <string name="button8_issue_7">Button8 Issue 7</string>
    <string name="button8_issue_8">Button8 Issue 8</string>
    <string name="button8_issue_9">Button8 Issue 9</string>
    <string name="button8_issue_10">Button8 Issue 10</string>
    <string name="button9_issue_1">Button9 Issue 1</string>
    <string name="button9_issue_2">Button9 Issue 2</string>
    <string name="button9_issue_3">Button9 Issue 3</string>
    <string name="button9_issue_4">Button9 Issue 4</string>
    <string name="button9_issue_5">Button9 Issue 5</string>
    <string name="button9_issue_6">Button9 Issue 6</string>
    <string name="button9_issue_7">Button9 Issue 7</string>
    <string name="button9_issue_8">Button9 Issue 8</string>
    <string name="button9_issue_9">Button9 Issue 9</string>
    <string name="button9_issue_10">Button9 Issue 10</string>
    <string name="button10_issue_1">Button10 Issue 1</string>
    <string name="button10_issue_2">Button10 Issue 2</string>
    <string name="button10_issue_3">Button10 Issue 3</string>
    <string name="button10_issue_4">Button10 Issue 4</string>
    <string name="button10_issue_5">Button10 Issue 5</string>
    <string name="button10_issue_6">Button10 Issue 6</string>
    <string name="button10_issue_7">Button10 Issue 7</string>
    <string name="button10_issue_8">Button10 Issue 8</string>
    <string name="button10_issue_9">Button10 Issue 9</string>
    <string name="button10_issue_10">Button10 Issue 10</string>
    <string name="diagnosis_question">Please select your issue type(s) below :</string>
    <string name="diagnosis_comment">Enter a description here&#8230;</string>
    <string name="profile_personal_info_title">PERSONAL INFORMATION</string>
    <string name="profile_banner_user_name">%1$s %2$s</string>
    <string name="profile_first_name_title">First name : </string>
    <string name="profile_last_name_title">Last name : </string>
    <string name="profile_address_title">Address : </string>
    <string name="profile_city_title">City : </string>
    <string name="profile_zip_title">Zip code : </string>
    <string name="profile_phone_title">Phone number : </string>
    <string name="profile_mail_title">Email : </string>
    <string name="profile_title1_edit_button">Edit</string>
    <string name="profile_title1_validate_button">Validate</string>
    <string name="profile_change_picture_button">Browse</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name ="role_message">Hello ! Welcome to HW_Maintenance ! \n \n Please select your situation below</string>
    <string name ="role_client">I am a client</string>
    <string name ="role_provider">I am an IT service provider</string>

</resources>