<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:background="@drawable/hdw2"
    tools:context=".controllers.WelcomeActivity">

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"/>

    <EditText
        android:id="@+id/welcome_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:inputType="text"/>

    <EditText
        android:id="@+id/welcome_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:inputType="text"/>

    <EditText
        android:id="@+id/welcome_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/postal_address"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:inputType="textPostalAddress"/>

    <EditText
        android:id="@+id/welcome_city"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:hint="@string/city"
        android:layout_gravity="start"
        android:layout_marginTop="15dp"
        android:inputType="text"/>

    <EditText
        android:id="@+id/welcome_zip"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:hint="@string/zip_code"
        android:layout_gravity="end"
        android:layout_marginTop="-46dp"
        android:maxLength="5"
        android:inputType="number"/>

    <EditText
        android:id="@+id/welcome_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:inputType="phone"/>

    <EditText
        android:id="@+id/welcome_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_address"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:inputType="textEmailAddress"/>

    <Button
        android:id="@+id/welcome_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/get_started_button"/>



</LinearLayout>