<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.ProfileActivity">

    <RelativeLayout
        android:id="@+id/profile_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/profile_title_banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:text="@string/bottom_menu_bt3"/>

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginTop="80dp"
            android:layout_centerInParent="true"
            android:src="@drawable/profile"
            app:civ_border_width="2dp"
            app:civ_border_color="#FF000000"/>

        <TextView
            android:id="@+id/profile_banner_user_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="140dp"
            android:paddingTop="10dp"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAlignment="center"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/bottom_menu"
        android:layout_below="@+id/profile_banner">

        <RelativeLayout

            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/profile_personal_info_title"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:text="@string/profile_personal_info_title"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"/>

            <Button
                android:id="@+id/profile_title1_edit_button"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/profile_title1_edit_button"
                android:layout_alignParentEnd="true" />

            <Button
                android:id="@+id/profile_title1_confirm_button"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/profile_title1_validate_button"
                android:layout_alignParentEnd="true"
                android:visibility="invisible"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/profile_first_name_title"
                android:layout_alignParentStart="true"
                android:text="@string/profile_first_name_title"
                android:layout_marginTop="60dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/profile_first_name"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="80dp"
                android:layout_marginTop="60dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/profile_first_name_edit"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="80dp"
                android:layout_marginTop="40dp"
                android:visibility="invisible"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/profile_last_name_title"
                android:layout_alignParentStart="true"
                android:text="@string/profile_last_name_title"
                android:layout_marginTop="95dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/profile_last_name"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="80dp"
                android:layout_marginTop="95dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/profile_last_name_edit"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="75dp"
                android:layout_marginStart="80dp"
                android:visibility="invisible"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/profile_address_title"
                android:layout_alignParentStart="true"
                android:text="@string/profile_address_title"
                android:layout_marginTop="130dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/profile_address"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="70dp"
                android:layout_marginTop="130dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/profile_address_edit"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="70dp"
                android:layout_marginTop="110dp"
                android:visibility="invisible"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/profile_city_title"
                android:layout_alignParentStart="true"
                android:text="@string/profile_city_title"
                android:layout_marginTop="165dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/profile_city"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="40dp"
                android:layout_marginTop="165dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/profile_city_edit"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="40dp"
                android:layout_marginTop="145dp"
                android:visibility="invisible"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/profile_zip_title"
                android:layout_alignParentStart="true"
                android:text="@string/profile_zip_title"
                android:layout_marginTop="200dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/profile_zip"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="70dp"
                android:layout_marginTop="200dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/profile_zip_edit"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="70dp"
                android:layout_marginTop="180dp"
                android:maxLength="5"
                android:visibility="invisible"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/profile_phone_title"
                android:layout_alignParentStart="true"
                android:text="@string/profile_phone_title"
                android:layout_marginTop="235dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/profile_phone"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="105dp"
                android:layout_marginTop="235dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/profile_phone_edit"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="105dp"
                android:layout_marginTop="215dp"
                android:visibility="invisible"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/profile_mail_title"
                android:layout_alignParentStart="true"
                android:text="@string/profile_mail_title"
                android:layout_marginTop="270dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/profile_mail"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="50dp"
                android:layout_marginTop="270dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/profile_mail_edit"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="50dp"
                android:layout_marginTop="250dp"
                android:visibility="invisible"/>

        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/bottom_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/profile_buttonHome"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:padding="15dp"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@color/colorPrimary"
            android:text="@string/bottom_menu_bt1"/>

        <Button
            android:id="@+id/profile_buttonRepairs"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:padding="15dp"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@color/colorPrimary"
            android:text="@string/bottom_menu_bt2"/>

        <Button
            android:id="@+id/profile_buttonProfile"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:padding="15dp"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@color/colorPrimary"
            android:text="@string/bottom_menu_bt3"/>

    </LinearLayout>

</RelativeLayout>